--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,19 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.7.2",
     "@headlessui/react": "^2.1.10",
     "@heroicons/react": "^2.1.5",
-    "@prisma/client": "5.21.1",
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "^5.21.1",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@repo/ui": "*",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.3.0",
+    "framer-motion": "^11.11.9",
     "headlessui": "^0.0.0",
     "heroicons": "^2.1.5",
     "lucide-react": "^0.453.0",
     "next": "14.2.6",
+    "next-auth": "^4.24.8",
+    "prisma": "^5.21.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "tailwind-merge": "^2.5.4",
@@ -38,7 +44,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.6",
     "postcss": "^8.4.47",
-    "prisma": "5.21.1",
+    "prisma": "^5.21.1",
     "tailwindcss": "^3.4.14",
     "typescript": "^5"
   },
