--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -18,6 +18,7 @@
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@repo/ui": "*",
+    "@vapi-ai/web": "^2.1.6",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.3.0",
@@ -30,6 +31,7 @@
     "prisma": "^5.21.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-full-screen": "^1.1.1",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7"
   },
